# OOP-and-C-Codes

./: Aims.c~  C Students~  README.md  vim_quiz~
C Programs 2/: arecur3.c  fibo.c  output  pac.c  partition2.c  reverselk.c  sort.c
C programs 1/: README.md  README.md~  array.c  hello.c  kkk  kkk.c  log.c  log1.c  power  power.c  prog3  prog3.c
C programs 1/assign1/: payoff  payoff.c~  test0  test0~
C programs 2/: arecur3  dllist.c  e1.c  fibo  life  life.c  output.c  per.c  sort2.c  sound.c  test2.c
C++/array/: frontdesk.cpp  frontdesk.h  frontdesk.ii  (+10 more)
Midsem/: Suprgya.56@iiitb.org.rpt~  sem1~  sem2~
Robot/: README.md
assign0/: error.c  submit  vim_quiz
assign1/: Datatypes.docx  Quiz 2 sol  exrc  q  tester.c
assign1/Unix Tutorial 7/units-1.74/: COPYING  ChangeLog  Makefile  Makefile.in  NEWS  README  aclocal.m4  config.cache  config.status  configure  configure.in  getopt.c  getopt.h  getopt1.c  parse.tab.c  parse.y  strfunc.c  texi2man  units  units.1  units.c  units.doc  units.dvi  units.h  units.info  units.man  units.texinfo
assign2/: q3.txt
assign3/: dbase  dbase.c~  function.txt  function.txt~  util.c~
assign4/: ds-lab-manual.docx  pointers.odt
basic code/: README.md  cplab
clab/: README.md  alutil.c  arecur  arecur.c  arecur.c~  arecur1  arecur1.c  arecur1.c~  arecur2.c  arecur3  arecur3.c  arecur3.c~  callbyreference.c  l  scan  scan.c  scan.dat~  scan1  scan1.c  scan1.c~
data types/: README.md
movies/: dbase.c  movies.dat~  util.c
palindrome/: README.md  apointers.c  life.c.template~  move.tgz  q4.txt~  structure.c~  wallavoid.tgz
(+348 files in other folders)
