dnl        Copyright (C) 1996 Free Software Foundation, Inc


dnl Process this file with autoconf to produce a configure script.

AC_INIT(units.c)
AC_PREREQ(2.12)
AC_ARG_PROGRAM

AC_SUBST(DEFIS)
AC_SUBST(STRFUNC)

dnl Checks for programs.
AC_PROG_CC
AM_C_PROTOTYPES
AC_C_CONST
AC_PROG_INSTALL

dnl Checks for libraries.

AC_CHECK_LIB(ncurses,tparm,TERMLIB=-lncurses,
  AC_CHECK_LIB(termcap,tgetent,TERMLIB=-ltermcap))
saved_LIBS="$LIBS"
LIBS="$LIBS $TERMLIB"
AC_CHECK_LIB(readline,readline,
  [AC_CHECK_HEADER(readline/readline.h, 
  LIBS="$saved_LIBS -lreadline $TERMLIB";DEFIS="$DEFIS -DREADLINE")],
  LIBS="$saved_LIBS")

dnl Checks for header files.
AC_CHECK_HEADER(string.h,[],[DEFIS="$DEFIS -DSTRINGS_H"])
AC_CHECK_HEADER(stdlib.h,[],[DEFIS="$DEFIS -DNO_STDLIB_H"])

dnl Checks for library functions.
AC_CHECK_FUNC(strchr,[],DEFIS="$DEFIS -DNO_STRCHR")
AC_CHECK_FUNC(strspn,[],DEFIS="$DEFIS -DNO_STRSPN";STRFUNC="strfunc.o")
AC_CHECK_FUNC(strtok,[],DEFIS="$DEFIS -DNO_STRTOK";STRFUNC="strfunc.o")

if test "$datadir"; then
  if echo $datadir|grep '/$'; then
    true
  else
    datadir="$datadir/"
  fi
fi

AC_OUTPUT(Makefile)

